fix:Footer display on mobile

--- a/src/components/Footer/Footer.styles.css
+++ b/src/components/Footer/Footer.styles.css
@@ -4,10 +4,8 @@
 
 .footer {
   margin: 1rem auto 0;
-  padding: 3rem 0;
+  padding: 3rem;
   max-width: 1100px;
-  display: flex;
-  justify-content: space-between;
 }
 
 .footer img {
@@ -15,9 +13,21 @@
 }
 
 .footer h3 {
-  margin-bottom: 1rem;
+  margin: 1rem 0;
 }
 
 .footer ul {
   list-style: none;
+}
+
+
+@media screen and (min-width: 900px) {
+  .footer {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .footer h3 {
+    margin-top: 0;
+  }
 }
